--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,6 @@
-[report]
-omit=
-    */python?.?/*
-    *site-packages/*
-    *site-packages/nose/*
-    *docopt.py*
-    *docopt*
-    *tests/*
-[html]
-directory = coverage_html
+[run]
+    branch=True
+    omit=*/site-packages/*
+         */sqlite3/*
+         */numbers.py
+         */decimal.py
